fix: flash message padding on smaller devices
- On smaller screen widths (<= 900px), .inner class applied a padding
  causing white space between nav and content blocks when no flashes
  displayed
- fix: applied .inner-flashes on messages block removing the padding

--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -21,3 +21,7 @@ body {
     padding: 2rem;
   }
 }
+
+.inner--flashes {
+    padding: 0;
+  }
